# project_euler

./: Cargo.toml  README.md  new.sh  problem_001.pl  problem_003.pl  problem_005.pl  project_004.pl  run-all-rs.sh
p001/: main.jl  main.lua  main.raku  main.rs  problem.md
p002/: main.jl  main.lua  main.pl  main.raku  main.rs  problem.md
p003/: main.jl  main.pl  main.rs  problem.md
p004/: main.pl  main.py  main.rs  problem.md
p005/: main.rs  problem.md
p006/: main.rs  problem.md
p007/: main.rs  problem.md
p008/: main.rs  problem.md
p009/: main.rs  problem.md
p010/: main.rs  problem.md
p011/: main.rs  problem.md
p012/: main.rs  problem.md
p013/: main.rs  problem.md
p014/: main.rs  problem.md
p015/: main.rs  problem.md
p016/: main.rs  problem.md
p017/: main.rs  problem.md
p018/: main.rs  problem.md
p019/: main.rs  problem.md
p020/: main.rs  problem.md
p021/: main.rs  problem.md
p022/: main.rs  problem.md
p023/: main.rs  problem.md
p024/: main.rs  problem.md
p025/: main.rs  problem.md
p026/: main.rs  problem.md
p027/: main.rs  problem.md
p028/: main.rs  problem.md
p067/: main.rs  problem.md
src/: utils.rs
