[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p001"
path = "p001/main.rs"
[[bin]]
name = "p002"
path = "p002/main.rs"
[[bin]]
name = "p003"
path = "p003/main.rs"
[[bin]]
name = "p004"
path = "p004/main.rs"
[[bin]]
name = "p005"
path = "p005/main.rs"
[[bin]]
name = "p006"
path = "p006/main.rs"
[[bin]]
name = "p007"
path = "p007/main.rs"

[dependencies]
num = "0.4.0"
