[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[[bin]]
name = "p001"
path = "p001/main.rs"
[[bin]]
name = "p002"
path = "p002/main.rs"
[[bin]]
name = "p003"
path = "p003/main.rs"
[[bin]]
name = "p004"
path = "p004/main.rs"
[[bin]]
name = "p005"
path = "p005/main.rs"
[[bin]]
name = "p006"
path = "p006/main.rs"
[[bin]]
name = "p007"
path = "p007/main.rs"
[[bin]]
name = "p008"
path = "p008/main.rs"
[[bin]]
name = "p009"
path = "p009/main.rs"
[[bin]]
name = "p010"
path = "p010/main.rs"
[[bin]]
name = "p011"
path = "p011/main.rs"
[[bin]]
name = "p012"
path = "p012/main.rs"
[[bin]]
name = "p013"
path = "p013/main.rs"
[[bin]]
name = "p014"
path = "p014/main.rs"
[[bin]]
name = "p015"
path = "p015/main.rs"
[[bin]]
name = "p016"
path = "p016/main.rs"
[[bin]]
name = "p017"
path = "p017/main.rs"
[[bin]]
name = "p018"
path = "p018/main.rs"
[[bin]]
name = "p067"
path = "p067/main.rs"
