[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
num = "0.4.0"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "p001"
path = "p001/main.rs"
[[bin]]
name = "p002"
path = "p002/main.rs"
[[bin]]
name = "p003"
path = "p003/main.rs"
[[bin]]
name = "p004"
path = "p004/main.rs"
[[bin]]
name = "p005"
path = "p005/main.rs"
[[bin]]
name = "p006"
path = "p006/main.rs"
[[bin]]
name = "p007"
path = "p007/main.rs"
[[bin]]
name = "p008"
path = "p008/main.rs"
[[bin]]
name = "p009"
path = "p009/main.rs"
[[bin]]
name = "p010"
path = "p010/main.rs"
[[bin]]
name = "p011"
path = "p011/main.rs"
[[bin]]
name = "p012"
path = "p012/main.rs"
[[bin]]
name = "p013"
path = "p013/main.rs"
[[bin]]
name = "p014"
path = "p014/main.rs"
[[bin]]
name = "p015"
path = "p015/main.rs"
[[bin]]
name = "p016"
path = "p016/main.rs"
[[bin]]
name = "p017"
path = "p017/main.rs"
[[bin]]
name = "p018"
path = "p018/main.rs"
[[bin]]
name = "p067"
path = "p067/main.rs"
[[bin]]
name = "p019"
path = "p019/main.rs"
[[bin]]
name = "p020"
path = "p020/main.rs"
[[bin]]
name = "p021"
path = "p021/main.rs"
[[bin]]
name = "p022"
path = "p022/main.rs"
[[bin]]
name = "p023"
path = "p023/main.rs"
[[bin]]
name = "p024"
path = "p024/main.rs"
